package models;

public enum EquipmentType {
    SHIELD,
    SWORD,
    PIKE,
    ARMOR,
    RIFLE,
    GRENADE,
    HELMET,
    LASER_SWORD,
    BIO_WEAPON,
    NANO_ARMOR
}

//Config damage values for each equipment type

