package models;

public enum SoldierEra {
    MEDIEVAL,
    WORLD_WAR,
    SCIENCE_FICTION
}
