package models;

public enum SoldierKind {
    INFANTRYMAN,
    HORSEMAN,
    ARMY_GROUP
}