package observer;

public interface IObserver {
    void update(String soldierName);
}
